# build_your_own_pagination

./: .env  Cargo.toml  README.md  compose.yaml
migrations/: 20250720134356_init.sql
src/: article.rs  main.rs  models.rs
src/entity/: search_query.rs
src/models/: search_response.rs
