[package]
name = "build_your_own_pagination"
version = "0.1.0"
edition = "2024"

[dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["http2", "server"] }
hyper-util = { version = "0.1.15", features = ["server", "tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
